trybuild-qcell/src/compiletest/tlcell-01.stderr
error[E0599]: no method named `clone` found for struct `TLCellOwner` in the current scope
  --> src/compiletest/tlcell-01.rs:10:25
   |
10 |     let owner2 = owner1.clone();  // Compile fail
   |                         ^^^^^ method not found in `TLCellOwner<Marker>`
